Treats empty gzipped data as unzipped in web_ui_url_loader_factory.cc

Bug: 793772
Change-Id: Ia9175cf484ba3d26c24d89a4bfcb42b1328b894b
Reviewed-on: https://chromium-review.googlesource.com/818373
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Commit-Queue: Tsuyoshi Horo <horo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523319}
Former-commit-id: f2d5a9f4e5e0233f5b6710030d15f1804abc3421